Fix whitespace in feedback and add semicolons (#8)

--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -10,6 +10,7 @@
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
+  white-space: pre-line;
   
   &:after {
     content: ' ';
